NodeJS a sample web page

--- a/public/html/404.html
+++ b/public/html/404.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../scss/style.css" />
-    <title>About</title>
+    <title>404</title>
   </head>
   <body>
-    <h3>This is about me</h3>
+    Not found
   </body>
 </html>
